--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,34 @@ breadcrumb-nav {
   --tw-text-opacity: 1;
   color: rgb(254 51 10 / var(--tw-text-opacity));
 }
+.orange-gradient-1 {
+  filter: blur(55px);
+  background: radial-gradient(50% 50% at 50% 50%, #2d90ef, #0268e3);
+}
+
+.orange-gradient-2 {
+  filter: blur(55px);
+  background: radial-gradient(50% 50% at 50% 50%, #0268e3 #2d90ef);
+}
+.button-slide {
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
+  transition: color 0.4s ease-in-out, border-color 0.4s ease-in-out;
+}
+
+.button-slide::before {
+  content: "";
+  position: absolute;
+  top: -100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(254, 51, 10); /* your red */
+  z-index: -1;
+  transition: top 0.4s ease-in-out;
+}
+
+.button-slide:hover::before {
+  top: 0;
+}
